# COAR-Notify-INRIA-HAL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth_admin.json  config.json  docker-compose.yml  pyproject.toml  requirements.txt  run.py  wait-for-it.sh
.github/workflows/: docker-publish.yml
app/: app.py  auth.py
app/classes/: ActionReviewNotifier.py  RelationshipAnnounceNotifier.py  RelationshipNotifier.py
app/routes/: api_documents.py  api_software.py  api_status.py  coar_inbox.py  db_updater_json.py  documents.py  jsonSOFTCITE_to_DB.py  software.py  softwares.py
app/static/data/: blacklist.csv
app/static/data/notif_test/: accept.json  reject.json  sofair-hal-03685380-2.json
app/templates/: error.html  home.html  notifications.html
app/utils/: blacklist_manager.py  db.py  notification_JSON_to_HAL.py  notification_handler.py
docs/: database.md  nginx.md
sandbox/: answer_from_hal_sender.py  json_sender.py  relationship_sender.py  status_check.py
